adding navlinks and a newpost template

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,8 @@
         <title>Build-a-Blog</title>
     </head>
     <body>
-
+        <a href="/blog">Main Blog Page</a>
+        <a href="/newpost">Add a Blog Entry</a>
         {% block content %}
         {% endblock %}
     </body>
