--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 
-<h1>This is a newpost</h1>
-
+<h1>Add a Blog Entry</h1>
+<form action="/blog" method="post">
+    <label>Title:
+        <input type="text" name="title" />
+    </label>
+    <label>Your new post:
+        <input type="textarea" name="post" />
+    </label>
+    <input type="submit" value="Add Entry" />
+</form>
 {% endblock %}
