--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -7,9 +7,11 @@
     <label>Title:
         <input type="text" name="title" />
     </label>
-    <label>Your new post:
-        <input type="textarea" name="post" />
-    </label>
+    <br/>
+    <label for="post">Your new post:</label>
+    <br/>
+    <textarea name="post" id="post" /></textarea>
+    <br/>
     <input type="submit" value="Add Entry" />
 </form>
 {% endblock %}
