adding permanence, and displaying blogs on main page

--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -8,9 +8,9 @@
         <input type="text" name="title" />
     </label>
     <br/>
-    <label for="post">Your new post:</label>
+    <label for="body">Your new post:</label>
     <br/>
-    <textarea name="post" id="post" /></textarea>
+    <textarea name="body" id="body" /></textarea>
     <br/>
     <input type="submit" value="Add Entry" />
 </form>
