--- a/templates/blog.html
+++ b/templates/blog.html
@@ -4,4 +4,10 @@
 
 <h1>Build a Blog</h1>
 
+{% for blog in bloglist %}
+<h1>{{ blog.title }}</h1>
+<p>{{ blog.body }}</p>
+<hr />
+
+{% endfor %}
 {% endblock %}
