refactoring to process new entry in /newpost route

--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h1>Add a Blog Entry</h1>
-<form action="/blog" method="post">
+<form action="/newpost" method="post">
     <label>Title:
         <input type="text" name="title" />
     </label>
