likely final commit. Adding styling, etc

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>Build-a-Blog</title>
+        <style>
+            .header {
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
         <a href="/blog">Main Blog Page</a>
