--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>Add a Blog Entry</h1>
+<h1 class="header">Add a Blog Entry</h1>
 <form action="/newpost" method="post">
     <label>Title:
         <input type="text" name="title" />
