adding error messages

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,10 @@
             .header {
                 text-align: center;
             }
+            .error {
+                color: red;
+                font-style: italic;
+            }
         </style>
     </head>
     <body>
