--- a/templates/login.html
+++ b/templates/login.html
@@ -3,17 +3,20 @@
 {% block content %}
 
 <h1>Login</h1>
+{% if login_err %}
+<span class="error">{{ login_err }}</span>
+{% endif %}
 <form action="/login" method="post">
     <label>Username
-        <input type="text" name="username" />
+        <input type="text" name="username" value="{{ username }}" />
     </label>
     <br/>
     <label>Password
-        <input type="text" name="password" />
+        <input type="password" name="password" />
     </label>
     <br/>
     <input type="submit" value="Submit" />
 </form>
-<span>Don't have an account? Create one!</span>
+<span>Don't have an account? <a href="/signup">Create one!</a></span>
 
 {% endblock %}
