adding navbar, logout, and supporting post authors

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,9 @@
     <body>
         <a href="/blog">Main Blog Page</a>
         <a href="/newpost">Add a Blog Entry</a>
+        <a href="/">Home</a>
+        <a href="/logout">Logout</a>
+        <a href="/login">Login</a>
         {% block content %}
         {% endblock %}
     </body>
