--- a/templates/blog.html
+++ b/templates/blog.html
@@ -7,6 +7,7 @@
 {% for blog in bloglist %}
 <a href="/blog?id={{ blog.id }}"><h1>{{ blog.title }}</h1></a>
 <p>{{ blog.body }}</p>
+<p>written by {{ blog.author.username }}</p>
 <hr />
 
 {% endfor %}
