--- a/templates/blog.html
+++ b/templates/blog.html
@@ -7,7 +7,7 @@
 {% for blog in bloglist %}
 <a href="/blog?id={{ blog.id }}"><h1>{{ blog.title }}</h1></a>
 <p>{{ blog.body }}</p>
-<p>written by {{ blog.author.username }}</p>
+<p>written by <a href="/blog?user={{ blog.author.username }}" >{{ blog.author.username }}</a></p>
 <hr />
 
 {% endfor %}
